--- a/app/src/main/res/layout/frag_profile.xml
+++ b/app/src/main/res/layout/frag_profile.xml
@@ -52,7 +52,7 @@
             android:layout_width="10dp"
             android:layout_height="wrap_content" />
 
-        <TextView
+        <EditText
             android:id="@+id/display_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -71,6 +71,15 @@
             android:layout_height="15dp"
             android:src="@drawable/pencil"
             android:layout_gravity="center"/>
+
+        <ImageView
+            android:id="@+id/edit_display_name_button_check"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/check"
+            android:layout_gravity="center"/>
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -105,7 +114,21 @@
             android:entries="@array/city_array"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+        <ImageView
+            android:id="@+id/edit_city_spinner_button"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/pencil"
             android:layout_gravity="center"/>
+        <ImageView
+            android:id="@+id/edit_city_spinner_check"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/check"
+            android:layout_gravity="center"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -136,6 +159,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
