--- a/app/src/main/res/layout/frag_profile.xml
+++ b/app/src/main/res/layout/frag_profile.xml
@@ -35,7 +35,7 @@
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_gravity="center"
-            android:src="@drawable/logo_original" />
+            android:src="@drawable/logo" />
         <Space
             android:layout_width="5dp"
             android:layout_height="wrap_content" />
