--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,16 +11,9 @@
         android:orientation="vertical"
         android:paddingTop="10dp"
         android:background="@drawable/background">
-        <ImageView
-            android:paddingRight="15dp"
-            android:id="@+id/sign_up_button"
-            android:layout_width="80dp"
-            android:layout_height="20dp"
-            android:layout_gravity="right"
-            android:src="@drawable/signup" />
 
         <ImageView
-            android:id="@+id/logo_community"
+            android:id="@+id/logoCommunity"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
@@ -46,7 +39,7 @@
                 android:src="@drawable/email"
                 android:layout_gravity="bottom"/>
             <EditText
-                android:id="@+id/email_input"
+                android:id="@+id/emailInput"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:hint="Email Address"
@@ -67,7 +60,7 @@
                 android:src="@drawable/password"
                 android:layout_gravity="bottom"/>
             <EditText
-                android:id="@+id/password_input"
+                android:id="@+id/passwordInput"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:hint="Password"
@@ -84,7 +77,7 @@
             android:textColor="#000000"
             android:layout_gravity="center"/>
         <TextView
-            android:id="@+id/forgot_password_button"
+            android:id="@+id/forgotPassword"
             android:onClick="something"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -95,26 +88,27 @@
             android:paddingBottom="10dp"/>
     </LinearLayout>
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/google_sign_in_button"
-        android:layout_width="120dp"
-        android:layout_height="42dp"
-        android:layout_gravity="center"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/login_button"
-        >
-    </com.google.android.gms.common.SignInButton>
-
-    <ImageView
-        android:id="@+id/login_button"
+    <Button
+        android:id="@+id/loginButton"
+        style="@style/NiceButton"
         android:layout_width="80dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="48dp"
         android:layout_marginBottom="5dp"
-        android:textSize="20dp"
-        android:src="@drawable/login"
+        android:text="Login"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/signUpButton"
+        style="@style/NiceButton"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginBottom="8dp"
+        android:text="Sign Up"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
