--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,6 +48,11 @@
         <item name="android:paddingEnd">10dp</item>
     </style>
 
+    <style name="NiceButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:colorButtonNormal">@color/themeGreen</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
