--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,13 +20,14 @@
             android:background="@drawable/logo" />
 
         <TextView
+            android:id="@+id/statusText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/login_slogan"
-            android:textStyle="bold"
             android:textColor="#000000"
             android:textSize="16dp"
-            android:gravity="center"/>
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="wrap_content"
