--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,6 +77,7 @@
         </LinearLayout>
 
         <CheckBox
+            android:id="@+id/remember_me"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/remember_me"
@@ -107,14 +108,14 @@
         >
     </com.google.android.gms.common.SignInButton>
 
-    <ImageView
+    <ImageButton
         android:id="@+id/login_button"
-        android:layout_width="80dp"
+        android:layout_width="90dp"
         android:layout_height="40dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="5dp"
         android:textSize="20dp"
-        android:src="@drawable/login"
+        android:background="@drawable/login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
