--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -7,8 +7,6 @@
     tools:context=".ResultActivity"
     android:background="@drawable/background">
 
-
-
     <android.support.constraint.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -75,6 +73,7 @@
 
         <Button
             android:id="@+id/getSuggestion"
+            style="@style/NiceButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
