--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
@@ -36,6 +37,10 @@
                 android:id="@+id/menu_LogOff"
                 android:icon="@drawable/ic_exit"
                 android:title="Log off"/>
+            <item
+                android:id="@+id/facebookShare"
+                android:title="Share to facebook"
+                android:icon="@drawable/ic_share"/>
         </menu>
     </item>
 
