--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,13 +12,36 @@
         android:paddingTop="10dp"
         android:background="@drawable/background">
 
-        <ImageView
-            android:id="@+id/logoCommunity"
-            android:contentDescription="@string/logo_content_description"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:background="@drawable/logo" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Space
+                android:layout_width="155dp"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/logoCommunity"
+                android:contentDescription="@string/logo_content_description"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:background="@drawable/logo" />
+
+            <Button
+                android:id="@+id/signUpButton"
+                style="@style/NiceButton"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="48dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/sign_up_button"
+                android:textSize="14sp" />
+
+
+        </LinearLayout>
+
+
 
         <TextView
             android:id="@+id/statusText"
@@ -89,6 +112,17 @@
             android:paddingBottom="10dp"/>
     </LinearLayout>
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/googleLoginButton"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="5dp"
+        android:text="@string/login_button"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <Button
         android:id="@+id/loginButton"
         style="@style/NiceButton"
@@ -100,18 +134,5 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/signUpButton"
-        style="@style/NiceButton"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/sign_up_button"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
 
 </android.support.constraint.ConstraintLayout>
