--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -2,14 +2,14 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingTop="10dp"
-        android:background="#FFFFFF">
+        android:paddingTop="5dp">
 
         <ImageView
             android:layout_width="50dp"
@@ -25,46 +25,97 @@
             android:textSize="16dp"
             android:gravity="center"/>
 
-        <EditText
-            android:id="@+id/create_email_input"
-            android:paddingTop="80dp"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:hint="Email Address"
-            android:inputType="textEmailAddress"
-            android:gravity="center"
-            android:layout_gravity="center">
+        <LinearLayout
+            android:paddingTop="25dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/user"/>
+            <EditText
+                android:id="@+id/create_username_input"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="Preferred Name"
+                android:inputType="textEmailAddress"
+                android:gravity="center"
+                android:layout_gravity="center">
             <requestFocus/>
-        </EditText>
+            </EditText>
+        </LinearLayout>
 
-        <EditText
-            android:id="@+id/create_password_input"
-            android:paddingTop="30dp"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:gravity="center"
-            android:layout_gravity="center" />
+        <LinearLayout
+            android:paddingTop="15dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/email"/>
+            <EditText
+                android:id="@+id/create_email_input"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="Email Address"
+                android:inputType="textEmailAddress"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+        </LinearLayout>
 
-        <EditText
-            android:id="@+id/create_confirm_password"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:hint="Confirm Password"
-            android:inputType="textPassword"
-            android:gravity="center"
-            android:layout_gravity="center" />
+        <LinearLayout
+            android:paddingTop="15dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/password"/>
+            <EditText
+                android:id="@+id/create_password_input"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:paddingTop="15dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/shield"/>
+            <EditText
+                android:id="@+id/create_confirm_password"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="Confirm Password"
+                android:inputType="textPassword"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+
     </LinearLayout>
 
     <ImageView
         android:id="@+id/sign_up_button"
-        android:onClick="something"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:src="@drawable/login"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/signup"
         android:textColor="@color/themeGreen"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
