--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -10,7 +10,7 @@
     android:padding="16dp">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/profilePicture"
         android:layout_width="70dp"
         android:layout_height="70dp"
         app:srcCompat="@mipmap/ic_launcher_round" />
