--- a/app/src/main/res/layout/fragment_pledge.xml
+++ b/app/src/main/res/layout/fragment_pledge.xml
@@ -60,7 +60,8 @@ android:paddingTop="5dp">
             android:textStyle="bold"
             android:text="@string/pledge_radio_button_1"
             android:textColor="@color/themeGreen"
-            android:buttonTint="@color/themeGreen"/>
+            android:buttonTint="@color/themeGreen"
+            android:checked="true"/>
 
         <RadioButton
             android:id="@+id/pledge0"
@@ -73,11 +74,31 @@ android:paddingTop="5dp">
             android:buttonTint="@color/themeGreen" />
     </RadioGroup>
 
-    <Button
-        style="@style/NiceButton"
-        android:id="@+id/pledge_button"
-        android:layout_width="120dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/pledge_button_text"
-        android:layout_gravity="center"/>
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+
+        <Button
+            style="@style/NiceButton"
+            android:id="@+id/pledge_button"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="@string/pledge_button_text"
+            android:layout_gravity="center"/>
+
+    <Button
+            style="@style/NiceButton"
+            android:drawableLeft="@drawable/com_facebook_button_icon"
+            android:gravity="center"
+            android:id="@+id/share_pledge_button"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="@string/pledge_share"
+            android:layout_gravity="center"/>
+
+
+    </LinearLayout>
+
 </LinearLayout>
