--- a/app/src/main/res/layout/fragment_suggestion.xml
+++ b/app/src/main/res/layout/fragment_suggestion.xml
@@ -192,17 +192,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/vancouverText2" />
 
-    <ImageButton
-        android:id="@+id/facebookShare"
+    <Button
+        android:id="@+id/pledge_button"
+        style="@style/NiceButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:src="@drawable/ic_share"
+        android:text="@string/make_pledge_button_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/treeHeading"
         app:layout_constraintTop_toBottomOf="@+id/vancouverText2" />
+
 
 </android.support.constraint.ConstraintLayout>
 
