--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -2,6 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/community_progress_bar"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone"/>
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -45,7 +53,7 @@
                     android:layout_gravity="right"
                     android:paddingRight="80dp"/>
                 <Spinner
-                    android:id="@+id/cityList"
+                    android:id="@+id/community_cityList"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:entries="@array/city_array"
@@ -66,6 +74,7 @@
                 android:text="@string/participants_text"
                 android:textColor="@color/themeGreen" />
             <TextView
+                android:id="@+id/community_pledge_participant"
                 android:paddingLeft="10dp"
                 android:textColor="#000000"
                 android:textSize="20dp"
@@ -89,13 +98,22 @@
                 android:text="@string/total_pledged_text"
                 android:textColor="@color/themeGreen"/>
             <TextView
-                android:paddingLeft="10dp"
+                android:id="@+id/community_pledge_total"
+                android:paddingLeft="6dp"
                 android:textColor="#000000"
                 android:textSize="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/total_pledged_number"/>
+            <TextView
+                android:paddingLeft="3dp"
+                android:textColor="#000000"
+                android:textSize="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="kgs"/>
         </LinearLayout>
 
         <LinearLayout
@@ -109,6 +127,7 @@
                 android:text="@string/trees_planted_text"
                 android:textColor="@color/themeGreen"/>
             <TextView
+                android:id="@+id/community_pledge_trees"
                 android:paddingLeft="10dp"
                 android:textColor="#000000"
                 android:textSize="16dp"
@@ -131,6 +150,7 @@
                 android:text="@string/avg_pledged_text"
                 android:textColor="@color/themeGreen"/>
             <TextView
+                android:id="@+id/community_pledge_average"
                 android:paddingLeft="10dp"
                 android:textColor="#000000"
                 android:textSize="20dp"
