--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -175,6 +175,15 @@
             android:text="@string/other_members"
             android:textColor="@color/themeGreen"/>
 
+        <TextView
+            android:id="@+id/otherPledge1"
+            android:layout_gravity="center"
+            android:paddingTop="10dp"
+            android:textSize="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="" />
+
 
     </LinearLayout>
 
